# lseg-options-delta-vega-hedging-engine

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: broker.yaml  demo_portfolio.yaml  hedge_rules.yaml  historical_backtest.yaml  lseg_option_coverage_rics.yaml  universe.yaml
docs/: 00_PROJECT_BRIEF.md  01_VALIDATED_AUDITS.md  02_ARCHITECTURE.md  03_IMPLEMENTATION_PLAN.md  04_MODULE_SPECS.md  05_TESTING_ACCEPTANCE.md  06_README_SPEC.md  07_CLAUDE_WORKFLOW.md  08_NEXT_PROMPTS.md
outputs/reports/: execution_safety_summary.md  (+5 more)
scripts/: audit_ibkr_basic.py  audit_ibkr_delayed_market_data.py  audit_ibkr_option_chains.py  audit_ibkr_option_greeks.py  audit_ibkr_option_market_data.py  audit_lseg_connection.py  audit_lseg_option_universe.py  audit_lseg_options_access.py  build_lseg_option_history_handoff.py  build_readme_outputs.py  full_stack_lseg_ibkr_delta_hedge_audit.py  run_daily_hedge.py  run_delta_vega_hedge_optimizer.py  run_demo.py  run_lseg_historical_hedge_backtest.py  run_real_lseg_historical_hedge_backtest.py  test_exact_lseg_option_ric_from_workspace.py  test_ibkr_connection.py
tests/: test_black_scholes.py  test_charts.py  test_contract_mapper.py  test_contract_selection.py  test_delta_hedger.py  test_delta_vega_optimizer.py  test_exposures.py  test_historical_delta_hedge_engine.py  test_ibkr_connection.py  test_implied_vol.py  test_market_comparison.py  test_moneyness_classification.py  test_option_history_loader.py  test_order_builder.py  test_paper_execution.py  test_transaction_costs.py
(+30 files in other folders)
