[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lseg-options-delta-vega-hedge-engine"
version = "2.0.0"
description = "Research-grade Python engine for LSEG listed-options delta-hedging and delta-vega optimisation. Black-Scholes IV reconstruction, transaction-cost-aware rebalancing, scipy-SLSQP four-method hedge comparison, and optional IBKR Paper safety validation."
requires-python = ">=3.11"
dependencies = [
    "ib_insync>=0.9.86",
    "lseg-data>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    "PyYAML>=6.0.1",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q"
